# FTHM-Solver

./: .gitignore  Dockerfile  README.md  block_matrix.py  block_matrix_3x3.ipynb  equations.ipynb  fixed_stress.py  fpm_0.py  fpm_0_scripts.ipynb  frac_flow.ipynb  frac_flow.py  frac_mech.py  frac_poromech.py  frac_poromech_small.py  full_petsc_solver.py  hm_solver.py  hm_solver_experimental.py  how_chebyshev_polynomials_work.ipynb  invert.py  iterative_solver.py  mat_utils.py  messing_with_memory.py  mypy.ini  near_null_space.ipynb  petsc.ipynb  petsc_help.py  playground copy.ipynb  playground.ipynb  playground.py  playground_exact.ipynb  playground_small.ipynb  plot_utils.py  poromech_small.py  pp_utils.py  preconditioner_mech.py  promise.py  purge_matrices.py  pyproject.toml  reproduce.py  run_petsc.py  (+10 more)
.github/: run_tests.yaml
experiments/: experiment1_results.ipynb  experiment2_results.ipynb  experiment3_results.ipynb  experiment_mandel_2_results copy.ipynb  experiment_mandel_2_results.ipynb  experiment_mandel_3_results.ipynb  experiment_mandel_result_richardson.ipynb  experiment_mandel_results copy.ipynb  experiment_mandel_results.ipynb  latex_header.py  load_system.ipynb  mandel_runscript.py  mandel_runscript_1.py  mandel_runscript_1_richardson.py  mandel_runscript_2.py  mandel_runscript_2_benchmark.py  mandel_runscript_3.py  material_constants.csv  misc.ipynb  models.py  runscript1.py  runscript2.py  runscript3.py  simplified_model.py  tmp_model.py  tmp_results.ipynb
fpm/: analytical fixed stress.ipynb  better_mech_stab.ipynb  block_matrix.py  compare.ipynb  cond.ipynb  contact_stabilizer.ipynb  dofs_info.ipynb  exact_eliminate.ipynb  fixed_st.ipynb  fixed_st_baseline.ipynb  fixed_st_franceschini.ipynb  fixed_st_full.ipynb  fixed_st_test_vector.ipynb  fixed_stress.py  fpm_0.py  fpm_01.py  fpm_0_alternative copy.ipynb  fpm_0_alternative.ipynb  fpm_0_profiling.ipynb  (+53 more)
(+54 files in other folders)
