[metadata]
name = FTHM-Solvers
version = 0.1.0
description = Iterative solvers for PorePy using PETSc
author = Yury Zabegaev, Eirik Keilegavlen
author_email = Yury.Zabegaev@uib.no, Eirik.Keilegavlen@uib.no
license = GPL-3
url = https://github.com/pmgbergen/FTHM-Solver

[options]
packages = find:
install_requires =
    pandas

[options.packages.find]
where = src