[metadata]
name = FTHM_Solvers
version = 0.1.0
description = Iterative solvers for PorePy using PETSc
author = Yury Zabegaev, Eirik Keilegavlen
author_email = Yury.Zabegaev@uib.no, Eirik.Keilegavlen@uib.no
license = GPL-3
url = https://github.com/pmgbergen/FTHM-Solver

[options]
packages = find:
# The list of dependencies is far from exhaustive, see the README for more details.
install_requires =
    pandas

[options.packages.find]
where = src
